add Dragon Player and LXImage-Qt to LXQt

--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -110,19 +110,19 @@
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/lxde/xmms2.png" alt="LXMusic" />
-          <h4>${_('LXMusic')}</h4>
-          <p>${_('LXMusic is the minimalist music player for LXDE. This is based on XMMS2, which is lightweight and has server/client design. ')}</p>
+          <img src="${path}/static/images/lxqt/dragonplayer.png" alt="Dragon Player" />
+          <h4>${_('Dragon Player')}</h4>
+          <p>${_('Dragon Player is a multimedia player where the focus is on simplicity, instead of features. Its simple interface is designed not to get in your way and instead empower you to simply play multimedia files.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/lxde/gpicview.png" alt="GPicView" />
-          <h4>${_('GPicView')}</h4>
-          <p>${_('GPicView is the standard picture viewer of LXDE. GPicView features lightning fast startup and an intuitive interface.')}</p>
+          <img src="${path}/static/images/lxqt/lximage-qt.png" alt="LXImage-Qt" />
+          <h4>${_('LXImage-Qt')}</h4>
+          <p>${_('LXImage-Qt is the Qt port of LXImage, a simple and fast image viewer you can also take screenshots with.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/lxde/asunder.png" alt="ASunder" />
-          <h4>${_('ASunder')}</h4>
-          <p>${_('ASunder is a graphical Audio CD ripper and encoder. You can use it to save tracks from an Audio CD as any of WAV, MP3, OGG, FLAC, Opus, WavPack, Musepack, AAC, and Monkey\'s Audio files.')}</p>
+          <img src="${path}/static/images/lxqt/yarock.png" alt="Yarock" />
+          <h4>${_('Yarock')}</h4>
+          <p>${_('Yarock is Qt4/Qt5 Modern Music Player designed to provide an easy and pretty music collection browser based on cover art.')}</p>
         </div>
       </div>
     </div>
