add qutIM to LXQt

--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -55,9 +55,9 @@
           <p>${_('A lightweight multiplatform web browser written in Qt Framework and using its web rendering engine QtWebEngine.')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxqt/yarock.png" alt="Yarock" />
-          <h4>${_('Yarock')}</h4>
-          <p>${_('Yarock is Qt4/Qt5 Modern Music Player designed to provide an easy and pretty music collection browser based on cover art.')}</p>
+          <img src="${path}/static/images/lxqt/qutim.png" alt="QutIM" />
+          <h4>${_('QutIM')}</h4>
+          <p>${_('QutIM is an extremely extendible open source and free multiprotocol Instant Messaging client.')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
           <img src="${path}/static/images/lxqt/qbittorrent.png" alt="qBittorrent" />
