replace qutIM with Quassel in LXQt

--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -55,9 +55,9 @@
           <p>${_('A lightweight multiplatform web browser written in Qt Framework and using its web rendering engine QtWebEngine.')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxqt/qutim.png" alt="QutIM" />
-          <h4>${_('QutIM')}</h4>
-          <p>${_('QutIM is an extremely extendible open source and free multiprotocol Instant Messaging client.')}</p>
+          <img src="${path}/static/images/lxqt/quassel.png" alt="Quassel" />
+          <h4>${_('Quassel')}</h4>
+          <p>${_('Quassel IRC is a modern, cross-platform, distributed IRC client, meaning that one clients can attach to and detach from a central core')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
           <img src="${path}/static/images/lxqt/qbittorrent.png" alt="qBittorrent" />
