--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -27,7 +27,7 @@
   <div class="row">
     <div class="col-md-8 text-left bottom-space">
         <h3>${_('What is a Live image?')}</h3>
-        <p>${_('The Python Classroom lab is shipped as a live operating system. It\'s everything you need to try out Fedora\'s Robotics Suite - you don\'t have to erase anything on your current system to try it out, and it won\'t put your files at risk. Take Fedora for a test drive, and if you like it, you can install Fedora directly to your hard drive straight from the Live Media desktop if you like.')}</p>
+        <p>${_('The Python Classroom lab is shipped as a live operating system. It\'s everything you need to try out Fedora\'s Python Classroom - you don\'t have to erase anything on your current system to try it out, and it won\'t put your files at risk. Take Fedora for a test drive, and if you like it, you can install Fedora directly to your hard drive straight from the Live Media desktop if you like.')}</p>
 	    <p>${_('To use this image, you need a drive that can create or "burn" DVDs, or a USB flash drive at least as big as the image.')}</p>
     </div>
     <div class="col-md-3 text-left col-md-offset-1">
