Python Classroom Lab: Use SymPy logo for Scientific Python

--- a/labs.fedoraproject.org/data/content/python-classroom/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          <img src="${path}/static/images/python-classroom/python.png" alt="Python Logo" />
+          <img src="${path}/static/images/python-classroom/sympy.png" alt="Scientific Python" />
             <h4>${_('Scientific Python stack')}</h4>
             <p>${_('All you need to learn or teach science in Python including SciPy')}</p>
             <a href="https://developer.fedoraproject.org/tech/languages/python/scipy.html">${Markup(_('Learn More &gt;'))}</a>
