add python-classroom splash file and load it

--- a/labs.fedoraproject.org/data/content/python-classroom/download/python-classroom-download-splash.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/python-classroom-download-splash.html
@@ -5,11 +5,11 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../../templates/master.html" />
   <head>
-    <title>${_('Download Fedora Robotics Suite')}</title>
+    <title>${_('Download Fedora Python Classroom')}</title>
   </head>
   <body>
 
-  <xi:include href="../../../templates/robotics/header.html" />
+  <xi:include href="../../../templates/python-classroom/header.html" />
 
   <header class="splashheader main-head recover-heading">
     <div class="container">
