--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -394,7 +394,7 @@
             <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
-          <div class="white">
+<!--          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/docker.png" />
             </div>
@@ -408,6 +408,7 @@
             <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
+          -->
         </div>
       </div>
       <div class="row top-space">
@@ -563,7 +564,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/docker.png" />
           </div>
@@ -572,6 +573,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+        -->
       </div>
       <div class="row top-space">
         <div class="col-xs-12 product-feature">
@@ -706,7 +708,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
-        <div class="white">
+<!--        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/docker.png" />
           </div>
@@ -717,6 +719,7 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
+        -->
       </div>
       <div class="row top-margin">
         <div class="col-xs-12 product-feature">
@@ -827,8 +830,8 @@
   <div class="white-hr"></div>
   <!-- end PowerPC -->
 
-  <!-- s390x -->
-    <!-- Desktop -->
+  <!-- s390x
+    Desktop
   <div class="jumbotron main-head hidden-xs hidden-sm">
     <div class="container using">
       <div class="row">
@@ -859,8 +862,9 @@
       </div>
     </div>
   </div>
+  -->
 
-  <!-- Mobile phones-->
+  <!-- Mobile phones
   <div class="jumbotron main-head visible-xs">
     <div class="container using">
       <div class="row">
@@ -886,8 +890,9 @@
       </div>
     </div>
   </div>
+  -->
 
-  <!-- Tablets-->
+  <!-- Tablets
   <div class="jumbotron main-head visible-sm">
     <div class="container using">
       <div class="row">
@@ -915,8 +920,9 @@
       </div>
     </div>
   </div>
+  -->
 
-  <!-- Resources -->
+  <!-- Resources
   <div class="jumbotron main-head">
     <div class="container">
       <div class="row">
@@ -946,8 +952,10 @@
       </div>
     </div>
   </div>
+
   <div class="white-hr"></div>
-  <!-- end s390x -->
+  end s390x
+  -->
 
 
 
