32 bit images are now in fedora-secondary

--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -44,7 +44,7 @@
           <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
-                  <p><a class="robotics-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Python-Classroom-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Py_Class']}</a></p>
+                  <p><a class="robotics-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Python-Classroom-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Py_Class']}</a></p>
               </li>
           </ul>
           <h4>${_('Older Releases')}</h4>
