add vagrant and ARM images for python-classroom, even checksum files for them

--- a/labs.fedoraproject.org/data/content/python-classroom/download/python-classroom-download-splash.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/python-classroom-download-splash.html
@@ -28,6 +28,9 @@
         <div class="col-xs-12">
           <xi:include href="../../../templates/generic/splash-checksum.html" />
         </div>
+        <div class="col-xs-12">
+          <xi:include href="../../../templates/python-classroom/splash-python.html" />
+        </div>
 
 	      <div class="col-xs-12">
       	  <xi:include href="../../../templates/generic/docs-links.html" />
