replace trojita and qbittorrent qith NM and transmission

--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -45,9 +45,9 @@
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxqt/trojita.png" alt="Trojita" />
-          <h4>${_('Trojita')}</h4>
-          <p>${_('A fast Qt IMAP e-mail client developed using the Qt C++ library.')}</p>
+          <img src="${path}/static/images/lxqt/nm.png" alt="NetworkManager" />
+          <h4>${_('NetworkManager')}</h4>
+          <p>${_('The goal of NetworkManager is to make networking just work with a minimum of user hassle, but still allow customization.')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
           <img src="${path}/static/images/lxqt/qupzilla.png" alt="QupZilla" />
@@ -60,9 +60,9 @@
           <p>${_('Quassel IRC is a modern, cross-platform, distributed IRC client, meaning that one clients can attach to and detach from a central core')}</p>
         </div>
         <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxqt/qbittorrent.png" alt="qBittorrent" />
-          <h4>${Markup(_('qBittorrent'))}</h4>
-          <p>${_('The qBittorrent project aims to provide an open-source software alternative to µTorrent.')}</p>
+          <img src="${path}/static/images/lxqt/transmission.png" alt="Transmission" />
+          <h4>${_('Transmission')}</h4>
+          <p>${_('Are you a downloader? Use Transmission to get new versions of Fedora LXQt Desktop!')}</p>
         </div>
       </div>
     </div>
