--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -28,7 +28,7 @@
     <div class="col-md-8 text-left bottom-space">
         <p>${Markup(_('The Python Classroom labs comes in 3 variants. A Live Image with GNOME, that can be downloaded on the top of this page, a Docker image and a Vagrant box for headless environments. Learn more about &lt;a href="%s"&gt;Docker&lt;/a&gt; and &lt;a href="%s"&gt;Vagrant&lt;/a&gt; in their documentation.') % ('https://docs.docker.com/get-started/', 'https://www.vagrantup.com/intro/getting-started/'))}</p>
         <h3>${_('Getting and running the Docker image')}</h3>
-        <pre>sudo docker pull registry.fedoraproject.org/f${global_variables.release['curr_id']}/python-classroom <br />sudo docker run -ti registry.fedoraproject.org/f${global_variables.release['curr_id']}/python-classroom</pre>
+        <pre>sudo docker pull candidate-registry.fedoraproject.org/f${global_variables.release['curr_id']}/python-classroom <br />sudo docker run -ti candidate-registry.fedoraproject.org/f${global_variables.release['curr_id']}/python-classroom</pre>
         <h3>${_('Running the Vagrant box')}</h3>
         <p>${_('First, download the box from the right side of this page.')}</p>
         <p>${_('For libvirt:')}</p>
