--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -59,7 +59,7 @@
   </py:choose>
 
    <header id="head">
-      <div id="product-logo-row">
+      <div id="product-logo-row row">
         <div class="col-sm-4 col-xs-12 productitem workstation">
           <div class="edition-logo">
           <a href="../${lang}/workstation">
@@ -110,7 +110,7 @@
 
       <div class="visible-xs col-xs-12 blue-pattern-box"></div>
 
-      <div class="row hidden-xs">
+      <div class="hidden-xs">
 	    <div class="col-xs-12 col-sm-4 productdesc-spacer">
 	       <hr />
 	    </div>
@@ -121,7 +121,7 @@
 		   <hr />
 	    </div>
       </div>
-      <div class="row hidden-xs">
+      <div class="hidden-xs">
         <div class="col-sm-4 col-xs-12 productdesc workstation">
           <div class="h-body liveusb">
             <h4>${_('Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.')}</h4>
