--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -110,38 +110,39 @@
 
       <div class="visible-xs col-xs-12 blue-pattern-box"></div>
 
-      <div class="hidden-xs">
-	    <div class="col-xs-12 col-sm-4 productdesc-spacer">
-	       <hr />
-	    </div>
-	    <div class="col-xs-12 col-sm-4 productdesc-spacer">
-		   <hr />
-	    </div>
-	    <div class="col-xs-12 col-sm-4 productdesc-spacer">
-		   <hr />
-	    </div>
-      </div>
-      <div class="hidden-xs">
-        <div class="col-sm-4 col-xs-12 productdesc workstation">
-          <div class="h-body liveusb">
-            <h4>${_('Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.')}</h4>
-          </div>
-        </div>
-        <div class="col-sm-4 col-xs-12 productdesc server">
-          <div class="h-body liveusb">
-            <h4>${_('Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.')}</h4>
-          </div>
-        </div>
-        <div class="col-sm-4 col-xs-12 productdesc cloud">
-          <div class="h-body">
-            <h4>${_('Fedora Atomic provides the best platform for your Linux-Docker-Kubernetes (LDK) application stack.')}</h4>
-          </div>
-        </div>
-      </div>
-
     </header>
 
     <div class="text-center grey-pattern-box top-margin">
+      <div class="container-fluid">
+        <div class="hidden-xs row">
+        <div class="col-xs-12 col-sm-4 productdesc-spacer">
+           <hr />
+        </div>
+        <div class="col-xs-12 col-sm-4 productdesc-spacer">
+         <hr />
+        </div>
+        <div class="col-xs-12 col-sm-4 productdesc-spacer">
+         <hr />
+        </div>
+        </div>
+        <div class="hidden-xs row">
+          <div class="col-sm-4 col-xs-12 productdesc workstation">
+            <div class="h-body liveusb thin">
+              <h4>${_('Fedora Workstation is a polished, easy to use operating system for laptop and desktop computers, with a complete set of tools for developers and makers of all kinds.')}</h4>
+            </div>
+          </div>
+          <div class="col-sm-4 col-xs-12 productdesc server">
+            <div class="h-body liveusb thin">
+              <h4>${_('Fedora Server is a powerful, flexible operating system that includes the best and latest datacenter technologies. It puts you in control of all your infrastructure and services.')}</h4>
+            </div>
+          </div>
+          <div class="col-sm-4 col-xs-12 productdesc cloud">
+            <div class="h-body thin">
+              <h4>${_('Fedora Atomic provides the best platform for your Linux-Docker-Kubernetes (LDK) application stack.')}</h4>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="container">
       	<div class="row">
 	        <div class="col-xs-12 col-sm-3">
