replace LXDE ARM image with LXQt

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -227,16 +227,16 @@
           </div>
           <div class="white">
             <div class="col-lg-1">
-            <img src="/static/images/lxde.png" />
+            <img src="/static/images/lxqt.png" />
             </div>
             <div class="col-lg-4">
-            <h3>${_('LXDE Desktop')}</h3>
+            <h3>${_('LXQt Desktop')}</h3>
             </div>
             <div class="col-lg-3">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ARM_LXDE']}</p>
+            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ARM_LXQt']}</p>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -315,11 +315,11 @@
         </div>
         <div class="white">
           <div class="col-xs-3">
-          <img src="/static/images/lxde.png" />
+          <img src="/static/images/lxqt.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('LXDE Desktop')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          <h3>${_('LXQt Desktop')}</h3>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -393,13 +393,13 @@
         </div>
         <div class="white">
           <div class="col-sm-3">
-          <img src="/static/images/lxde.png" />
+          <img src="/static/images/lxqt.png" />
           </div>
           <div class="col-sm-5">
-          <h3>${_('LXDE Desktop')}</h3>
+          <h3>${_('LXQt Desktop')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
