remove border bottom in the news banner

--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -51,7 +51,7 @@
           <div class="row">
             <div class="col-xs-12 text-center index">
               <h3>
-                <a href="https://fedoramagazine.org/fedora-26-is-here/">${Markup(_('Fedora %(rel)s released!')) % {'rel':global_variables.release['curr_id']}}</a> ${_('Get it now.')}
+                <a class="news" href="https://fedoramagazine.org/fedora-26-is-here/">${Markup(_('Fedora %(rel)s released!')) % {'rel':global_variables.release['curr_id']}}</a> ${_('Get it now.')}
               </h3>
             </div>
           </div>
