Add registration and funding end date

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -36,7 +36,7 @@
           <p>
             We will be announcing the list of accepted proposals soon. The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
           </p>
-	  <p>Our CFP for session proposals closed on June 15, 2017. However, <mark>registration remains open!</mark> <a href="http://register.flocktofedora.org">Register now</a> - you are welcome to register to attend whether or not you have proposed a session.</p>
+          <p>Our CFP for session proposals closed on June 15, 2017.</p>
           <h3>Event Dates</h3>
           <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.</p>
           <table class="calendar">
@@ -71,6 +71,10 @@
                 <td>Sep <span>03</span></td>
               </tr>
             </table>
+          <h2>Registration Information</h2>
+          <p><mark>Registration for Flock is still open!</mark> <a href="http://register.flocktofedora.org">Register now</a> - you are welcome to register to attend whether or not you have proposed a session.</p>
+          <p>Attendees who register and pay the registration fee by July 24, 2017 will be included in the count for items that have to be confirmed in advance.  This includes lunch and the t-shirt.  If you register and/or pay after this date you may not receive all of the benefits of registration.</p>
+          <p>Requests for financial assistance are handled via the registration system.  Applications for Financial Assistance filed after July 14, 2017 are unlikely to be funded as there are only limited funds available.</p>
         </div>
       </div>
     </div>
@@ -157,7 +161,7 @@
 	    <li>The Cape Cod Resort and Conference Center will charge your credit card immediately for one night as a deposit which will be applied to the last night of your stay. The remainder of the charges will be paid at checkout.</li>
 	    <li><strong>July 26</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
 	  </ul>
-	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your lodging for you.</p> 
+	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your travel arrangements (flight, hotel, bus) for you.</p> 
           <img src="/static/images/capecod_hotel_thumbs.png" style="width: 100%;" />
 	  <p><em>* 11.7% lodging tax applies.</em></p>
           </div>
