Hotel date for Flock extended

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -159,7 +159,7 @@
 	    <li>A <strong>$169/night</strong>* double occupancy (under 18 free) discounted rate is available the weekend before and the weekend after.</li>
 	    <li>If you are booking by phone, please state that you are attending the Flock 2017 Conference.</li>
 	    <li>The Cape Cod Resort and Conference Center will charge your credit card immediately for one night as a deposit which will be applied to the last night of your stay. The remainder of the charges will be paid at checkout.</li>
-	    <li><strong>July 26</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
+        <li><strong><strike>July 26</strike>August 4 - Extended</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
 	  </ul>
 	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your travel arrangements (flight, hotel, bus) for you.</p> 
           <img src="/static/images/capecod_hotel_thumbs.png" style="width: 100%;" />
