Add official Telegram group per discussion w/ @bex & @eischmann

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -109,7 +109,7 @@
             <div class="col-xs-12" id="telegram">
           <h3>Telegram</h3>
           <p>
-            Telegram channel TBA
+            Telegram is used as a quicker way to communicate during the conference with mobile devices and/or laptops. We have an official group you can join to participate in the conference at <strong>@flocktofedora</strong>. You can join by clicking <a href="https://t.me/flocktofedora">this link</a>.
           </p>
           </div>
           </div>
