Adding Flock Travel Guide

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -129,6 +129,7 @@
             <p style="font-size: xx-small;">Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under ODbL</p>
           </div>
           <div class="col-xs-12 col-sm-5">
+            <p><b>Download our fancy travel guide to help you get to and from the conference venue. (<a href="/static/images/travel-guide-A4.pdf">A4</a>&nbsp;<a href=="/static/images/travel-guide-USletter.pdf">US Letter</a>)</b></p>
             <p>
             There are many transportation options to get to, from, and around Hyannis and Cape Cod.
             </p>
