Adding Flock Travel Guide

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -130,6 +130,9 @@
           </div>
           <div class="col-xs-12 col-sm-5">
             <p>
+            <strong>Download our fancy travel guide to help you get to and from the conference venue. (<a href="/static/images/travel-guide-A4.pdf">A4</a>&nbsp;<a href="/static/images/travel-guide-USletter.pdf">US Letter</a>)</strong>
+            </p>
+            <p>
             There are many transportation options to get to, from, and around Hyannis and Cape Cod.
             </p>
             <p>
