flocktofedora.org: Update sponsors list

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -208,6 +208,10 @@
           <br/>
           <h3>Gold Level</h3>
           <p>
+            <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
+          </p>
+          <p>
+            <a href="https://developer.capitalone.com/open-source/"><img src="../../static/images/capitalone-devexchange.png"/></a>
           </p>
           <br/>
           <h3>Bronze Level</h3>
