make the builder happy

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -130,7 +130,7 @@
           </div>
           <div class="col-xs-12 col-sm-5">
             <p>
-            <strong>Download our fancy travel guide to help you get to and from the conference venue. (<a href="/static/images/travel-guide-A4.pdf">A4</a>&nbsp;<a href="/static/images/travel-guide-USletter.pdf">US Letter</a>)</strong>
+            <strong>Download our fancy travel guide to help you get to and from the conference venue. (<a href="${path}/static/images/travel-guide-A4.pdf">A4</a>&nbsp;<a href="${path}/static/images/travel-guide-USletter.pdf">US Letter</a>)</strong>
             </p>
             <p>
             There are many transportation options to get to, from, and around Hyannis and Cape Cod.
@@ -164,7 +164,7 @@
 	    <li>The Cape Cod Resort and Conference Center will charge your credit card immediately for one night as a deposit which will be applied to the last night of your stay. The remainder of the charges will be paid at checkout.</li>
         <li><strong><strike>July 26</strike>August 4 - Extended</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
 	  </ul>
-	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your travel arrangements (flight, hotel, bus) for you.</p> 
+	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your travel arrangements (flight, hotel, bus) for you.</p>
           <img src="/static/images/capecod_hotel_thumbs.png" style="width: 100%;" />
 	  <p><em>* 11.7% lodging tax applies.</em></p>
           </div>
