F26 s390x released - add it to the website

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -830,7 +830,7 @@
   <div class="white-hr"></div>
   <!-- end PowerPC -->
 
-  <!-- s390x
+  <!-- s390x -->
     Desktop
   <div class="jumbotron main-head hidden-xs hidden-sm">
     <div class="container using">
@@ -862,9 +862,8 @@
       </div>
     </div>
   </div>
-  -->
 
-  <!-- Mobile phones
+  <!-- Mobile phones -->
   <div class="jumbotron main-head visible-xs">
     <div class="container using">
       <div class="row">
@@ -890,9 +889,8 @@
       </div>
     </div>
   </div>
-  -->
 
-  <!-- Tablets
+  <!-- Tablets -->
   <div class="jumbotron main-head visible-sm">
     <div class="container using">
       <div class="row">
@@ -920,9 +918,8 @@
       </div>
     </div>
   </div>
-  -->
 
-  <!-- Resources
+  <!-- Resources -->
   <div class="jumbotron main-head">
     <div class="container">
       <div class="row">
@@ -954,8 +951,7 @@
   </div>
 
   <div class="white-hr"></div>
-  end s390x
-  -->
+  <!-- end s390x -->
 
 
 
