fix python-classroom vagrant paths and image sizes

--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -47,10 +47,10 @@
                   <p><a class="python-classroom-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Python-Classroom-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Py_Class']}</a></p>
               </li>
               <li>
-                  <p><a class="python-classroom-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Labs/x86_64/images/Fedora-Python-Classroom-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-libvirt.box">${Markup(_('Libvirt %sMB Vagrant image')) % global_variables.iso_size['libvirt_Py_Class']}</a></p>
+                  <p><a class="python-classroom-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/x86_64/images/Fedora-Python-Classroom-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-libvirt.box">${Markup(_('Libvirt %sMB Vagrant image')) % global_variables.iso_size['libvirt_Py_Class']}</a></p>
               </li>
               <li>
-                  <p><a class="python-classroom-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Labs/x86_64/images/Fedora-Python-Classroom-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-virtualbox.box">${Markup(_('VirtualBox %sMB Vagrant image')) % global_variables.iso_size['virtualbox_Py_Class']}</a></p>
+                  <p><a class="python-classroom-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/x86_64/images/Fedora-Python-Classroom-Vagrant-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-virtualbox.box">${Markup(_('VirtualBox %sMB Vagrant image')) % global_variables.iso_size['virtualbox_Py_Class']}</a></p>
               </li>
           </ul>
           <h4>${Markup(_('ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; Technology'))}</h4>
