--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -31,12 +31,11 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Schedule</h2>
           <p>
-            Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that will be accepted. A team status report is less likely to be accepted than a collaborative team working session or a workshop.
+            <strong>The <a href="https://flock2017.sched.org">Flock 2017 schedule</a> is now available!</strong>
           </p>
           <p>
-            We will be announcing the list of accepted proposals soon. The Flock 2017 planning committee will focus on ensuring the right folks can attend these working sessions, so expect a productive and energizing event!
+            Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that were accepted. The scheduled slots favor collaborative team working sessions and workshops over team status reports.
           </p>
-          <p>Our CFP for session proposals closed on June 15, 2017.</p>
           <h3>Event Dates</h3>
           <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.</p>
           <table class="calendar">
