flocktofedora: Add RHEL to sponsors

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -215,6 +215,9 @@
           <p>
             <a href="https://developer.capitalone.com/open-source/"><img src="../../static/images/capitalone-devexchange.png"/></a>
           </p>
+          <p>
+            <a href="https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux"><img src="../../static/images/rhel-logo-3lines.png"/></a>
+          </p>
           <br/>
           <h3>Bronze Level</h3>
           <p>
