flocktofedora: add Lulzbot as bronze sponsor

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -221,6 +221,7 @@
           <br/>
           <h3>Bronze Level</h3>
           <p>
+            <a href="https://www.lulzbot.com/"><img src="../../static/images/lulzbot-logo.png"/></a>
           </p>
         </div>
       </div>
