alt.fpo: Workstation i386 netinst is also on secondary

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -160,7 +160,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Workstation')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="https://getfedora.org/verify">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="https://getfedora.org/verify">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
