flocktofedora: Add social event info

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -187,7 +187,8 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-moon-o"></i></div>
           <h2>Evening Events</h2><br/>
-					<p>Information coming soon.</p>
+          <p>On Tuesday night, join community members for Game Night in the Bass River room. Pizza and beverages will be provided. Bring a favorite card or board game to share and play with friends and colleagues!</p>
+          <p>On Wednesday night, the social event will be located at <a href="http://www.wackenhammer.com/">Wackenhammer's Clockwork Arcade and Carousel</a>, where you'll find not only classic arcade games, pinball, and other entertainments, but also amazing dinner options from <a href="http://www.bonmetruck.com/">Bon Me</a> and refreshments.</p>
         </div>
       </div>
     </div>
