flocktofedora: registration is now closed

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -71,9 +71,9 @@
               </tr>
             </table>
           <h2>Registration Information</h2>
-          <p><mark>Registration for Flock is still open!</mark> <a href="http://register.flocktofedora.org">Register now</a> - you are welcome to register to attend whether or not you have proposed a session.</p>
-          <p>Attendees who register and pay the registration fee by July 24, 2017 will be included in the count for items that have to be confirmed in advance.  This includes lunch and the t-shirt.  If you register and/or pay after this date you may not receive all of the benefits of registration.</p>
-          <p>Requests for financial assistance are handled via the registration system.  Applications for Financial Assistance filed after July 14, 2017 are unlikely to be funded as there are only limited funds available.</p>
+          <p><mark>Registration for Flock is now closed.</mark></p>
+          <p>Attendees who registered and paid the registration fee by July 24, 2017 are included in the count for items that have to be confirmed in advance.  This includes lunch and the t-shirt.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
+          <p>If you did not register, you are still welcome to attend the conference and events. However, you will not receive benefits such as lunch and a shirt.</p>
         </div>
       </div>
     </div>
