arm: and add a button to verify Minimal

--- a/arm.fedoraproject.org/data/content/verify.html
+++ b/arm.fedoraproject.org/data/content/verify.html
@@ -32,13 +32,16 @@
         </div>
     </div>
     <div class="row bottom-margin">
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-3 col-xs-12">
           <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Server!')}</a>
         </div>
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-3 col-xs-12">
+          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Minimal!')}</a>
+        </div>
+        <div class="col-sm-3 col-xs-12">
           <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Workstation!')}</a>
         </div>
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-3 col-xs-12">
           <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Spins!')}</a>
         </div>
     </div>
